change armchart color

--- a/src/perfui/templates/perfui/basic_operation.html
+++ b/src/perfui/templates/perfui/basic_operation.html
@@ -59,8 +59,9 @@
 		<h3 class="panel-title">Benchmark Test Environment Settings</h3>
 	</div>
 	<div class="panel-body">
-		<p class="text-success">This page is to setup test environment. Typically action is to deploy, start or stop defined VEX component and start or stop simulator.</p>
-	</div>
+		<!-- <p class="text-success">This page is to setup test environment. Typically action is to deploy, start or stop defined VEX component and start or stop simulator.</p>
+	     -->
+	 </div>
 </div>
 </row>
 
