change armchart color

--- a/src/perfui/templates/perfui/perf_operation.html
+++ b/src/perfui/templates/perfui/perf_operation.html
@@ -66,15 +66,12 @@
 	    <div class="panel-heading">
 			<h3 class="panel-title">Benchmark Test Profile</h3>
 		</div>
-		<div class="panel-body">
-			<p class="text-success">This page is to start or stop VEX benchmark test, then collect benchmark test result in time.</p>
-		</div>
 		<table class="table table-condensed text-info table-striped" style="word-break:break-all; word-wrap:break-all;">
 			<tr>
 			    <td class="text-center" style="width:8%">VOD</td>
 			    <td style="word-break:break-all; word-wrap:break-all;">
 			    <em>
-			    Start with one master manifest request and two bitrate requests for every session.
+			    Start with one master manifest request and more bitrate requests for every session.
 			    <br />
 			    VEX benchmark key is the number of concurrent sessions per second
 			    </em>
