--- a/src/perfui/templates/perfui/basic_operation.html
+++ b/src/perfui/templates/perfui/basic_operation.html
@@ -58,10 +58,7 @@
     <div class="panel-heading">
 		<h3 class="panel-title">Benchmark Test Environment Settings</h3>
 	</div>
-	<div class="panel-body">
-		<!-- <p class="text-success">This page is to setup test environment. Typically action is to deploy, start or stop defined VEX component and start or stop simulator.</p>
-	     -->
-	 </div>
+	 <div class="divider"><h5 class="page-header"></h5></div>
 </div>
 </row>
 
