--- a/src/perfui/templates/perfui/perf_operation.html
+++ b/src/perfui/templates/perfui/perf_operation.html
@@ -71,7 +71,7 @@
 			    <td class="text-center" style="width:8%">VOD</td>
 			    <td style="word-break:break-all; word-wrap:break-all;">
 			    <em>
-			    Start with one master manifest request and more bitrate requests for every session.
+			    Start with one master manifest request and more media requests for every session
 			    <br />
 			    VEX benchmark key is the number of concurrent sessions per second
 			    </em>
@@ -81,9 +81,9 @@
 			    <td class="text-center" style="width:8%">Linear</td>
 			    <td style="word-break:break-all; word-wrap:break-all;">
 			    <em>
-			    Start with one master manifest request and one bitrate request, and continuously serve a bitrate request every 2 seconds for every session
+			    Start with one master manifest request and one media request, and continuously serve a media request every 2 seconds for every session
 			    <br />
-			    VEX benchmark key is the max number of concurrent sessions it can manage
+			    VEX benchmark key is the max number of sessions it can manage
 			    </em>
 				<br />
 				</td>
