--- a/src/perfui/templates/perfui/perf_result.html
+++ b/src/perfui/templates/perfui/perf_result.html
@@ -52,6 +52,24 @@
         overflow-x:auto;
         overflow-y:auto 
     }
+    
+    #indexResponseDistribution
+    {
+        top:15%;
+        height:88%;
+        overflow:scroll;
+        overflow-x:auto;
+        overflow-y:auto 
+    }
+    
+    #bitrateResponseDistribution
+    {
+        top:15%;
+        height:88%;
+        overflow:scroll;
+        overflow-x:auto;
+        overflow-y:auto 
+    }
 </style>
 {% endblock%}
 
@@ -117,6 +135,7 @@
 			  </tbody>
 			</table>
 	      </div>
+	      <div><button class="btn btn-success" data-toggle="modal" data-target="#indexResponseDistribution">Response Details</button></div>
 	   </div>
 	   <div class="col-sm-6 col-md-4">
 	   	  <div id="bitrateChart" class="thumbnail" style="width: auto; height: 350px;"></div>
@@ -137,12 +156,12 @@
 			    </tr>
 			  </tbody>
 			</table>
-			{% if error_dict %}
-	        <p>
-	        	<!--<a href="#" class="btn btn-primary" role="button" onclick="alert("show distribution details info")">Distribution Details</a>-->
+			<p>
+			    <button class="btn btn-success" data-toggle="modal" data-target="#bitrateResponseDistribution">Response Details</button>
+			    {% if error_dict %}
 	        	<button class="btn btn-danger" data-toggle="modal" data-target="#myModal">Response Failure Details</button>
+	            {% endif %}
 	        </p>
-	        {% endif %}
 	      </div>
 	      
 	      
@@ -245,6 +264,84 @@
 	</div>
 
 	<!-- 模态框（Modal） -->
+	<div class="modal fade" id="indexResponseDistribution" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	    <div class="modal-dialog" style="width:600px;">
+	        <div class="modal-content">
+	            <div class="modal-header">
+	                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+	                <h4 class="modal-title" id="myModalLabel">Master Response Distribution</h4>
+	            </div>
+	            <div class="modal-body">
+	            	<table class="table">
+				  	  <colgroup>
+						<col style="width:60%">
+						<col style="width:40%">
+						</colgroup>
+					  <thead>
+					    <tr>
+					      <th class="text-center">Response Time Range(Millisecond)</th>
+					      <th class="text-center">Percent(%)</th>
+					     </tr>
+					  </thead>
+					  {% for key, value in index_response_time_distribution_list %}
+					  	 {% if forloop.counter|divisibleby:"2" %} 
+						  	 <tr class="active text-center">
+						 {%else%}
+						  	 <tr class="success text-center">
+						 {%endif%}
+								  <td>{{ key }}</td>
+								  <td>{{ value }}</td>
+							  </tr>
+					   {% endfor%}
+					</table>
+	            </div>
+	            <div class="modal-footer">
+	                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	            </div>
+	        </div><!-- /.modal-content -->
+	    </div><!-- /.modal -->
+	</div>
+
+	<!-- 模态框（Modal） -->
+	<div class="modal fade" id="bitrateResponseDistribution" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	    <div class="modal-dialog" style="width:600px;">
+	        <div class="modal-content">
+	            <div class="modal-header">
+	                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+	                <h4 class="modal-title" id="myModalLabel">Media Response Distribution</h4>
+	            </div>
+	            <div class="modal-body">
+	            	<table class="table">
+				  	  <colgroup>
+						<col style="width:60%">
+						<col style="width:40%">
+						</colgroup>
+					  <thead>
+					    <tr>
+					      <th class="text-center">Response Time Range(Millisecond)</th>
+					      <th class="text-center">Percent(%)</th>
+					     </tr>
+					  </thead>
+					  {% for key, value in bitrate_response_time_distribution_list %}
+					  	 {% if forloop.counter|divisibleby:"2" %} 
+						  	 <tr class="active text-center">
+						 {%else%}
+						  	 <tr class="success text-center">
+						 {%endif%}
+								  <td>{{ key }}</td>
+								  <td>{{ value }}</td>
+							  </tr>
+					   {% endfor%}
+					</table>
+	            </div>
+	            <div class="modal-footer">
+	                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	            </div>
+	        </div><!-- /.modal-content -->
+	    </div><!-- /.modal -->
+	</div>
+	
+	<!-- 模态框（Modal） -->
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 	    <div class="modal-dialog" style="width:900px;">
 	        <div class="modal-content">
@@ -290,6 +387,7 @@
 	        </div><!-- /.modal-content -->
 	    </div><!-- /.modal -->
 	</div>
+	
 	<div class="divider"><h5 class="page-header"></h5></div>
 {% endif %}
 {% endblock%}
