udpdate portal title

--- a/src/perfui/templates/perfui/include/nav.html
+++ b/src/perfui/templates/perfui/include/nav.html
@@ -7,7 +7,7 @@
 			</button>
 			<ul class="nav navbar-nav navbar-brand navbar-left">
 			    <li>
-		            <img src="/static/img/comcast_logo.jpg" width="40" height="25"></img>VEX Benchmark Test
+		            <img src="/static/img/comcast_logo.jpg" width="40" height="25"></img>VEX Benchmark Test Portal
 		        </li>
 		    </ul>
 		</div>
