change linear warm interval from second to minute

--- a/src/perfui/templates/perfui/perf_operation.html
+++ b/src/perfui/templates/perfui/perf_operation.html
@@ -142,7 +142,7 @@
 			            {% ifequal vex_operation.perf_config.test_type 'VOD_T6'%}
 			            	Minutes
 			            {% else %}
-		            		Seconds
+		            		Minutes
 		            	{% endifequal %}
 		            </td>
 		            <td id="op_status_{{vex_operation.id}}" >
